--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -1,7 +1,7 @@
 
 .login-popup{
     position:fixed;
-    z-index: 10;
+    z-index: 100;
     width: 100%;
     height: 100%;
     background-color: #00000090;
