--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,3 +1,3 @@
 .chatbot-icon {
-    @apply w-12 h-12 bg-gray-700 text-white rounded-full flex items-center justify-center shadow-lg cursor-pointer hover:bg-gray-600 transition duration-300 fixed right-0 sm:bottom-20 z-10;
+    @apply w-12 h-12 bg-gray-700 text-white rounded-full flex items-center justify-center shadow-lg cursor-pointer hover:bg-gray-600 transition duration-300 fixed right-0 sm:bottom-20 z-20;
 }
